[gd_scene load_steps=5 format=2]

[ext_resource path="res://main/point.gd" type="Script" id=1]
[ext_resource path="res://assets/point.png" type="Texture" id=2]
[ext_resource path="res://assets/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://main/info_panel_row.tscn" type="PackedScene" id=4]

[node name="Point" type="Control" groups=["points"]]
anchor_left = 0.360352
anchor_top = 0.333333
anchor_right = 0.368164
anchor_bottom = 0.346667
margin_left = -369.0
margin_top = -200.0
margin_right = -377.0
margin_bottom = -208.0
mouse_filter = 1
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}
_row = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Info" type="PanelContainer" parent="CanvasLayer"]
visible = false
margin_right = 126.0
margin_bottom = 77.0

[node name="RowContainer" type="VBoxContainer" parent="CanvasLayer/Info"]
margin_left = 7.0
margin_top = 7.0
margin_right = 119.0
margin_bottom = 70.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
